--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ts-esm-jest-typehead-template",
   "version": "1.0.0",
   "description": "Template repo for Typescript + ESM module dependency + Typehead + Jest",
+  "type": "module",
   "main": "dist/index.js",
   "module": "dist/index-esm.js",
   "typings": "dist/index.d.ts",
@@ -9,7 +10,7 @@
     "pretest": "npm run build",
     "test": "jest",
     "start": "typehead serve",
-    "build": "tsc",
+    "build": "typehead build",
     "prepublishOnly": "npm run build"
   },
   "keywords": [],
@@ -17,11 +18,12 @@
   "license": "ISC",
   "devDependencies": {
     "@mapbox/typehead": "^1.0.3",
+    "@types/d3-quadtree": "^3.0.2",
     "@types/jest": "^27.0.3",
     "@types/node": "^16.11.13",
     "jest": "^27.4.5",
     "ts-jest": "^27.1.1",
-    "ts-node": "^10.4.0",
+    "ts-node": "^10.7.0",
     "tslib": "^2.3.1",
     "typescript": "^4.5.4"
   },
@@ -30,7 +32,6 @@
     "access": "public"
   },
   "dependencies": {
-    "@types/delaunator": "^3.0.0",
-    "delaunator": "^5.0.0"
+    "d3-quadtree": "^3.0.1"
   }
 }
