--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "typings": "dist/index.d.ts",
   "scripts": {
     "pretest": "npm run build",
-    "test": "jest",
+    "test": "tsc && jest",
     "start": "typehead serve",
     "build": "typehead build",
     "prepublishOnly": "npm run build"
